# DonCEyKongJr

./: .gitignore  README.md
Client/: CMakeLists.txt  main.c
Client/src/entity/: CocodrileList.c  CocodrileList.h  CocodrileLogic.c  CocodrileLogic.h  Crocodile.h  CrocodrileList.c  CrocodrileList.h  CrocodrileLogic.c  CrocodrileLogic.h  DKJr.h  DKLogic.c  DKLogic.h  Fruit.h  FruitList.c  FruitList.h  FruitLogic.c  FruitLogic.h  Kremlin.h  cocodrile.h  fruit.h  game.c  game.h
Client/src/json/: jsonSerializer.c  jsonSerializer.h
Client/src/logic/data/: codes.h  matrix.csv
Client/src/logic/entityList/: CrocList.c  CrocList.h  FruitList.c  FruitList.h
Client/src/logic/game/: DonkeyDynamics.c  DonkeyDynamics.h  Game.c  Game.h
Client/src/sockets/: clientSocket.c  clientSocket.h
Client/src/ui/: GameUI.c  GameUI.h  donkeyUI.c  donkeyUI.h  main.c
Server/src/com/donkeyKong/connection/: Socket.java
Server/src/com/donkeyKong/logic/: Game.java
Server/src/com/donkeyKong/ui/: MainWindow.java
Server/src/com/donkeyKong/util/: Util.java
_Server/src/com/donkeykongjr/connection/: ClientSocket.java  MultiServer.java  Sockets.java
_Server/src/com/donkeykongjr/entity/: Cocodrile.java  Fruit.java
_Server/src/com/donkeykongjr/json/: jsonParser.java
_Server/src/com/donkeykongjr/logic/: Game.java
_Server/src/com/donkeykongjr/ui/: Main.java  MainWindowsJavaController.java  mainWindowsJava.fxml
_server/src/logic/: Crocodile.java
_server/src/socket/: Serializer.java
_server/src/ui/: Main.java  MainWindowController.java  mainWindow.fxml
client/: CMakeLists.txt
client/src/: main.c
client/src/logic/: Game.c  Game.h
client/src/logic/data/: matrix.csv
client/src/logic/entity/: Crocodile.h  DKJr.h  Fruit.h  Kremlin.h
client/src/logic/lists/: CrocodileNode.c  CrocodileNode.h  FruitNode.c  FruitNode.h  KremlinNode.c  KremlinNode.h
client/src/socket/: Serializer.c  Serializer.h  Socket.c  Socket.h  cJson.h
client/src/ui/: AllegroWindow.c  AllegroWindow.h  gui.c  gui.h
server/src/logic/: Game.java
src/primaryMatrix/: Game.java
src/ui/: MainWindowsJavaController.java  main.java
srcC/: CMakeLists.txt
srcC/logic/: CocodrileList.h  DKLogic.c  FruitList.c  FruitList.h  FruitLogic.c
